<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.widget.EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="Task Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.EditText
        android:id="@+id/editTextDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="Task Description"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/taskDt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDes"
        android:gravity="center"
        android:background="@drawable/rouded_border"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        android:hint="@string/task_date"/>

    <ImageView
        android:id="@+id/dt_select"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/date_selector"
        app:layout_constraintStart_toEndOf="@id/taskDt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDes"
        android:gravity="center"/>

    <TextView
        android:id="@+id/task_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDt"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        android:text="@string/task_pr"/>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#024CAF50"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_priority"
        app:layout_constraintHorizontal_bias="0.1">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_low"
            android:textColor="#297E43"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#A66E2D"
            android:text="@string/task_medium"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C82106"
            android:text="@string/task_high"
            android:textSize="14sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/taskDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/task_duration"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/radioGroup1"/>

</androidx.constraintlayout.widget.ConstraintLayout>