<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg"
    tools:context=".account.AccountFragment">

        <ImageView
            android:id="@+id/accImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/baseline_account_circle_24"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uNam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accImg"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/uMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uNam"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/userMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/userDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uMail"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="5dp"
            android:text="@string/dob"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:src="@drawable/ic_cal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bluetoothLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userDob"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

    <Button
        android:id="@+id/btnScan"
        android:text="Scan Bluetooth Devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bluetoothLay"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_shape">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/btn_save"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>





</RelativeLayout>