<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua_haze"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    tools:context=".login_registration.SignUpActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivRegLogo"
        android:layout_marginTop="18dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvJoinUs"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        app:lottie_fileName="schedule.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tvJoinUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="15dp"
        android:text="Join Us"
        android:textColor="#1A1A1A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivRegLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usernameReg"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvJoinUs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#6A5ACD"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/atvUsernameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/emailReg"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordInputLayout"
        app:boxStrokeWidth="1dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#6A5ACD"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/atvEmailReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/passwordReg"
        app:endIconMode="password_toggle"
        app:endIconTint="#6A5ACD"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#6A5ACD"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/atvPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btnsignup_gradient"
        android:text="@string/sign_upReg"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvSignIn"
        android:elevation="4dp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/signin_redirect"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>